# spms

./: README.md
nvm_write/: CMakeLists.txt  prj.conf
nvm_write/include/: button_dump.h  log_store.h  sen0546.h
nvm_write/src/: button_dump.c  log_store.c  main.c  sen0546.c
rev_0/: .gitignore  CMakeLists.txt  nrf52dk_nrf52832.overlay  pm_static.yml  prj.conf
rev_0/debug/rev_0/zephyr/: zephyr.elf
rev_0/include/: log_store.h  sen0114.h  sen0390.h  sen0546.h  spms_ble.h  spms_sensors.h
rev_0/src/: log_store.c  main.c  sen0114.c  sen0390.c  sen0546.c  spms_ble.c  spms_sensors.c
sen0546/: CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
sen0546/src/: main.c
